--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
+    "openai": "^5.1.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-confirm-alert": "^3.0.6",
