--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
+    "lucide-react": "^0.515.0",
     "openai": "^5.1.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
